--- a/src/assets/styles/core/global.scss
+++ b/src/assets/styles/core/global.scss
@@ -16,7 +16,7 @@
     font-weight: 400;
     src: local('PT Serif'),
          local('PTSerif-Regular'),
-         url(//themes.googleusercontent.com/static/fonts/ptserif/v4/sDRi4fY9bOiJUbgq53yZCfesZW2xOQ-xsNqO47m55DA.woff) format('woff');
+         url('//themes.googleusercontent.com/static/fonts/ptserif/v4/sDRi4fY9bOiJUbgq53yZCfesZW2xOQ-xsNqO47m55DA.woff') format('woff');
 }
 
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Sans+JP');
@@ -82,11 +82,6 @@
  */
 * {
     box-sizing: border-box;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
 
     &:focus {
@@ -95,11 +90,6 @@
 }
 
 input {
-    -webkit-touch-callout: auto;
-    -webkit-user-select: auto;
-    -khtml-user-select: auto;
-    -moz-user-select: auto;
-    -ms-user-select: auto;
     user-select: auto;
 }
 
@@ -129,7 +119,6 @@ html {
 
     &::-webkit-scrollbar-thumb {
         background: rgba(0, 0, 0, 0.1);
-        -webkit-border-radius: 10px;
         border-radius: 10px;
     }
 }
