--- a/src/assets/styles/modules/modal.scss
+++ b/src/assets/styles/modules/modal.scss
@@ -33,8 +33,8 @@
 
     .mhwc-panel {
         position: relative;
-        height: $section_name-height;
-        line-height: $section_name-height;
+        height: $panel-height;
+        line-height: $panel-height;
         text-align: center;
         background-color: #666;
         color: white;
