1. update style 2. release

--- a/src/assets/styles/modules/common.scss
+++ b/src/assets/styles/modules/common.scss
@@ -235,3 +235,31 @@
         }
     }
 }
+
+.mhwc-item-2-step {
+    background-color: #eee;
+
+    .mhwc-content {
+        background-color: #fff;
+    }
+
+    .mhwc-value {
+        background-color: #fff;
+    }
+}
+
+.mhwc-item-3-step {
+    background-color: #ccc;
+
+    .mhwc-content {
+        background-color: #eee;
+
+        .mhwc-content {
+            background-color: #fff;
+        }
+    }
+
+    .mhwc-value {
+        background-color: #fff;
+    }
+}
