1. support purple sharpness

--- a/src/assets/styles/modules/common.scss
+++ b/src/assets/styles/modules/common.scss
@@ -129,6 +129,10 @@
             &:nth-child(6) {
                 background-color: white;
             }
+
+            &:nth-child(7) {
+                background-color: purple;
+            }
         }
     }
 
