--- a/src/assets/styles/modules/modal.scss
+++ b/src/assets/styles/modules/modal.scss
@@ -26,11 +26,6 @@
         background-color: #fff;
     }
 
-    .mhwc-slim-modal {
-        left: 30%;
-        right: 30%;
-    }
-
     .mhwc-panel {
         position: relative;
         height: $panel-height;
@@ -83,8 +78,17 @@
 
         .mhwc-item {
             width: calc(100% - 10px);
-            height:100%;
+            height: 100%;
             overflow: auto;
+        }
+    }
+
+    .mhwc-slim-modal {
+        left: 30%;
+        right: 30%;
+
+        .mhwc-wrapper {
+            column-count: 2;
         }
     }
 }
