1. add fast include skills

--- a/src/assets/styles/modules/app.scss
+++ b/src/assets/styles/modules/app.scss
@@ -25,6 +25,7 @@
             margin: 0;
             padding: 0;
             line-height: $header-height;
+            font-weight: bold;
 
             @include font-size(2.4);
         }
