1. refactor 2. add tab ui

--- a/src/assets/styles/modules/app.scss
+++ b/src/assets/styles/modules/app.scss
@@ -75,12 +75,10 @@
                 @include font-size(1.6);
             }
 
-            .mhwc-icons_bundle,
             .mhwc-icons_bundle-left,
             .mhwc-icons_bundle-right {
                 position: absolute;
                 top: 0;
-                right: 10px;
                 height: $panel-height;
                 line-height: $panel-height;
 
@@ -98,8 +96,11 @@
             }
 
             .mhwc-icons_bundle-left {
-                right: inherit;
                 left: 10px;
+            }
+
+            .mhwc-icons_bundle-right {
+                right: 10px;
             }
         }
 
