--- a/src/assets/styles/modules/common.scss
+++ b/src/assets/styles/modules/common.scss
@@ -10,7 +10,8 @@
 // Common Components
 .mhwc-functional_input,
 .mhwc-functional_selector,
-.mhwc-functional_button {
+.mhwc-functional_button,
+.mhwc-functional_tab {
     transition-property: background-color;
     transition-duration: 0.1s;
 
