--- a/src/assets/styles/modules/common.scss
+++ b/src/assets/styles/modules/common.scss
@@ -17,7 +17,8 @@
 
     position: relative;
     display: inline-block;
-    margin-left: 2px;
+    margin-left: 1px;
+    margin-right: 1px;
 
     @include font-size(1.2);
 
@@ -82,6 +83,35 @@
 
         .mhwc-label {
             display: block;
+        }
+    }
+}
+
+.mhwc-functional_tab {
+    .mhwc-body {
+        background-color: #999;
+
+        @include border-radius(3px 3px 0 0);
+
+        .mhwc-icon {
+            height: 30px;
+            padding-bottom: 10px;
+        }
+
+        &:hover {
+            background-color: #333;
+        }
+    }
+
+    .is-active {
+        background-color: #fff;
+
+        .mhwc-icon {
+            color: #999;
+        }
+
+        &:hover {
+            background-color: #fff;
         }
     }
 }
