--- a/src/assets/styles/modules/modal.scss
+++ b/src/assets/styles/modules/modal.scss
@@ -43,9 +43,11 @@
             top: 0;
             right: 10px;
 
-            .mhwc-functional_input,
-            .mhwc-functional_selector,
-            .mhwc-functional_button {
+            .mhwc-basic_input,
+            .mhwc-basic_selector,
+            .mhwc-icon_input,
+            .mhwc-icon_selector,
+            .mhwc-icon_button {
                 .mhwc-body {
                     background-color: #999;
                 }
