1. update ui behavior

--- a/src/assets/styles/modules/common.scss
+++ b/src/assets/styles/modules/common.scss
@@ -31,6 +31,10 @@
         @include border-radius(3px);
     }
 
+    .mhwc-input {
+        padding: 0 4px;
+    }
+
     .mhwc-select {
         padding-right: 20px;
 
