--- a/src/assets/styles/modules/modal.scss
+++ b/src/assets/styles/modules/modal.scss
@@ -42,12 +42,17 @@
             position: absolute;
             top: 0;
             right: 10px;
+            padding-top: 10px;
+            height: 30px;
 
             .mhwc-basic_input,
             .mhwc-basic_selector,
             .mhwc-icon_input,
             .mhwc-icon_selector,
             .mhwc-icon_button {
+                vertical-align: top;
+                margin-left: 2px;
+
                 .mhwc-body {
                     background-color: #999;
                 }
