--- a/src/assets/styles/modules/common.scss
+++ b/src/assets/styles/modules/common.scss
@@ -266,6 +266,8 @@
     }
 
     .mhwc-name {
+        @include nowrap();
+
         margin: 5px 2.5px 0 2.5px;
         padding: 4px 0 5px 0;
         height: 30px;
