1. update ui 2. add icon switch ui 3. release

--- a/src/assets/styles/modules/common.scss
+++ b/src/assets/styles/modules/common.scss
@@ -50,6 +50,7 @@
 
 .mhwc-icon_input,
 .mhwc-icon_selector,
+.mhwc-icon_switch,
 .mhwc-icon_button,
 .mhwc-icon_tab {
     transition-property: background-color;
