1. upgrade components 2. release

--- a/src/assets/styles/modules/common.scss
+++ b/src/assets/styles/modules/common.scss
@@ -75,6 +75,7 @@
             vertical-align: top;
             width: 20px;
             height: 20px;
+            color: white;
         }
 
         .mhwc-select,
