1. release 2. update webpack 5 3. update bootstrap 5

--- a/src/assets/styles/modules/app.scss
+++ b/src/assets/styles/modules/app.scss
@@ -12,9 +12,10 @@
     padding: 0 10px;
     height: $header-height;
     background-color: #333;
+    text-align: center;
 
     .mhwc-title {
-        margin: 0 auto;
+        display: inline-block;
         color: #ccc;
 
         &:hover {
